@@ -4,6 +4,7 @@ codespeak-lib (1.2.1-3) UNRELEASED; urgency=low
   * Depend on python-pytest-xdist instead of python-execnet.
   * Update py.test manpage. Thanks to Adam Schmalhofer
     <Adam.Schmalhofer@gmx.de>.
+  * Update author/copyright of py.test manpage.
 
  -- Chris Lamb <lamby@debian.org>  Sat, 27 Feb 2010 18:02:44 +0000
 
